update index.html , edit index.css

--- a/index.html
+++ b/index.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/index.css">
     <title>Document</title>
 </head>
 <body>
     <section class="preview">
-        <img src="/img/background-preview.jpg" alt="bgimg">
-        <header>
-            <div>
-                <img src="/icon/logo.svg" alt="logo">
+        <header class="header">
+                <img class="logo" src="/icon/logo.svg" alt="logo">
                 <span class="logo-name">Travel Portal</span>
                 <nav>
-                    <ul>
-                        <li><a href="#">How It Works</a></li>
-                        <li><a href="#">Plan Your Trip</a></li>
-                        <li><a href="#">Destinations</a></li>
-                        <li><a href="#">Travel Stories</a></li>
-                    </ul>
+                    <div class="nav-list">
+                        <a class="nav-list-item" href="#">How It Works</a>
+                        <a class="nav-list-item" href="#">Plan Your Trip</a>
+                        <a class="nav-list-item" href="#">Destinations</a>
+                        <a class="nav-list-item" href="#">Travel Stories</a>
+                    </div>
                 </nav>
                 <button>
                     Login
                 </button>
-            </div>
         </header>
     </section>
 </body>
