add fonts and customize header

--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Magra:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/index.css">
+
     <title>Document</title>
 </head>
 <body>
     <section class="preview">
         <header class="header">
-                <img class="logo" src="/icon/logo.svg" alt="logo">
-                <span class="logo-name">Travel Portal</span>
+                <nav class="logo">
+                 <img class="logo-img" src="/icon/logo.svg" alt="logo">
+                 <span class="logo-name">Travel Portal</span>
+                </nav>
                 <nav>
                     <div class="nav-list">
                         <a class="nav-list-item" href="#">How It Works</a>
@@ -20,8 +29,8 @@
                         <a class="nav-list-item" href="#">Travel Stories</a>
                     </div>
                 </nav>
-                <button>
-                    Login
+                <button class="nav-button">
+                    <span>Login</span>
                 </button>
         </header>
     </section>
