ended work at first section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/index.css">
 
     <title>Document</title>
@@ -29,10 +32,21 @@
                         <a class="nav-list-item" href="#">Travel Stories</a>
                     </div>
                 </nav>
-                <button class="nav-button">
-                    <span>Login</span>
+                <button type="button" class="nav-button">
+                    <span class="nav-button-text">Login</span>
                 </button>
         </header>
+        <div class="preview-element">
+            <h1 class="preview-title">Explore the beauty of the World</h1>
+            <p class="preview-text">Receive personalized recommendations for countries, hotels, activities and more</p>
+            <div class="search">
+                <input type="text" placeholder="What would you like to do?" class="input">
+                <button class="search-button">Start Planning</button>
+
+            </div>
+        
+        </div>
+
     </section>
 </body>
 </html>
