upd : add section stories

--- a/index.html
+++ b/index.html
@@ -13,30 +13,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/styles.css">
 
     <title>Document</title>
 </head>
 <body class="body">
     <header>
+        <div class="header">
+            <nav class="logo">
+            <img class="logo-img" src="/icon/logo.svg" alt="logo">
+            <span class="logo-name">Travel Portal</span>
+            </nav>
+            <nav>
+                <ul class="nav-list">
+                    <li class="nav-list-item"><a class="nav-list-item-text" href="#">How It Works</a></li>
+                    <li class="nav-list-item"><a class="nav-list-item-text" href="#">Plan Your Trip</a></li>
+                    <li class="nav-list-item"><a class="nav-list-item-text" href="#">Destinations</a></li>
+                    <li class="nav-list-item"><a class="nav-list-item-text" href="#">Travel Stories</a></li>
+                </ul>
+            </nav>
+            <button type="button" class="nav-button button">
+                <span class="nav-button-text">Login</span>
+            </button>
+        </div>
+    </header>
+    <main class="main-content">
         <section class="preview">
-            <div class="header">
-                    <nav class="logo">
-                    <img class="logo-img" src="/icon/logo.svg" alt="logo">
-                    <span class="logo-name">Travel Portal</span>
-                    </nav>
-                    <nav>
-                        <ul class="nav-list">
-                            <li class="nav-list-item"><a class="nav-list-item-text" href="#">How It Works</a></li>
-                            <li class="nav-list-item"><a class="nav-list-item-text" href="#">Plan Your Trip</a></li>
-                            <li class="nav-list-item"><a class="nav-list-item-text" href="#">Destinations</a></li>
-                            <li class="nav-list-item"><a class="nav-list-item-text" href="#">Travel Stories</a></li>
-                        </ul>
-                    </nav>
-                    <button type="button" class="nav-button button">
-                        <span class="nav-button-text">Login</span>
-                    </button>
-            </div>
             <div class="preview-element">
                 <h1 class="preview-title">Explore the beauty of the World</h1>
                 <p class="preview-text">Receive personalized recommendations for countries, hotels, activities and more</p>
@@ -45,9 +47,7 @@
                     <button class="search-button button">Start Planning</button>
                 </div>
             </div>
-        </section>
-    </header>
-    <main class="main-content">
+        </section>  
         <section class="steps">
             <h2 class="steps-title">3 STEPS TO THE PERFECT TRIP</h2>
             <div class="steps-content">
@@ -89,6 +89,65 @@
             <button class="destination-button">
                 <img src="/icon/arrow.svg" alt="arrow" class="button-arrow">
                 <span class="button-text">Find More</span>
+            </button>
+        </section>
+        <section class="stories">
+            <h2 class="stories-title">TRAVEL STORIES</h2>
+            <div class="stories-item first">
+                <div class="stories-picture">
+                    <img src="/img/stories picture 1.jpg" alt="img" class="stories-picture">
+                </div>
+                <div class="stories-text">
+                    <h3 class="stories-text-title">10 Photos of Attractive Thailand</h3>
+                    <p class="stories-text-content">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+                        <br>
+                        <a href="" class="read-more-link">Read More</a>
+                    </p>
+                </div>
+            </div> 
+            <div class="stories-item">
+                <div class="stories-picture">
+                    <img src="/img/stories picture 2.jpg" alt="img" class="stories-picture">
+                </div>
+                <div class="stories-text">
+                    <h3 class="stories-text-title">10 Photos of Attractive Thailand</h3>
+                    <p class="stories-text-content">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+                        <br>
+                        <a href="" class="read-more-link">Read More</a>
+                    </p>
+                </div>
+            </div>
+            <div class="stories-item">
+                <div class="stories-picture">
+                    <img src="/img/stories picture 3.jpg" alt="img" class="stories-picture">
+                </div>
+                <div class="stories-text">
+                    <h3 class="stories-text-title">10 Photos of Attractive Thailand</h3>
+                    <p class="stories-text-content">
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+                    <br>
+                    <a href="" class="read-more-link">Read More</a>
+                    </p>
+                </div>     
+            </div>
+            <div class="stories-item">
+                <div class="stories-picture">
+                    <img src="/img/stories picture 4.jpg" alt="img" class="stories-picture">
+                </div>
+                <div class="stories-text">
+                    <h3 class="stories-text-title">10 Photos of Attractive Thailand</h3>
+                    <p class="stories-text-content">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+                        <br>
+                        <a href="" class="read-more-link">Read More</a>
+                     </p>
+                </div>  
+            </div>
+            <button class="stories-button">
+                <img src="/icon/arrow.svg" alt="arrow" class="button-arrow">
+                <span class="button-text">See More</span>
             </button>
         </section>
     </main>
