upd : add footer and bg

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 <span class="button-text">Find More</span>
             </button>
         </section>
+        <div class="bg-2">
+            <div class="bg-3"></div>
+        </div>
         <section class="stories">
             <h2 class="stories-title">TRAVEL STORIES</h2>
             <div class="stories-item first">
@@ -151,5 +154,13 @@
             </button>
         </section>
     </main>
+    <footer class="footer">
+        <span class="footer-text">All Rights Reserved © Travel Portal</span>
+        <ul class="footer-icon-list">
+            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer icon 1.svg" alt="icon"></a></li>
+            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer icon 2.svg" alt="icon"></a></li>
+            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer icon 3.svg" alt="icon"></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
