change image name

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             <h2 class="steps-title">3 STEPS TO THE PERFECT TRIP</h2>
             <div class="steps-content">
                 <div class="steps-content-item">
-                    <img src="/icon/First icon.svg" alt="icon" class="step-icon">
+                    <img src="/icon/First-icon.svg" alt="icon" class="step-icon">
                     <p class="steps-content-item">Tell us what you want to do</p>
                 </div>
                 <div class="steps-content-item">
-                    <img src="/icon/Second icon.svg" alt="icon" class="step-icon">
+                    <img src="/icon/Second -icon.svg" alt="icon" class="step-icon">
                     <p class="steps-content-item">Share us preferable dates </p>
                 </div>
                 <div class="steps-content-item">
-                    <img src="/icon/Third icon.svg" alt="icon" class="step-icon">
+                    <img src="/icon/Third-icon.svg" alt="icon" class="step-icon">
                     <p class="steps-content-item">We will give you recommendations</p>
                 </div>
             </div>
@@ -69,15 +69,15 @@
             <h2 class="destination-title">POPULAR DESTINATIONS</h2>
             <div class="destination-country">
                 <div class="destination-item">
-                    <img src="/img/destination 1.jpg" alt="spain" class="destination-item-picture">
+                    <img src="/img/destination-1.jpg" alt="spain" class="destination-item-picture">
                     <span class="destination-item-text">SPAIN</span>
                 </div>
                 <div class="destination-item">
-                    <img src="/img/desination 2.jpg" alt="japan" class="destination-item-picture">
+                    <img src="/img/desination-2.jpg" alt="japan" class="destination-item-picture">
                     <span class="destination-item-text">JAPAN</span>
                 </div>
                 <div class="destination-item">
-                    <img src="/img/destination 3.jpg" alt="usa" class="destination-item-picture">
+                    <img src="/img/destination-3.jpg" alt="usa" class="destination-item-picture">
                     <span class="destination-item-text">USA</span>
                 </div>
             </div>
@@ -98,7 +98,7 @@
             <h2 class="stories-title">TRAVEL STORIES</h2>
             <div class="stories-item first">
                 <div class="stories-picture">
-                    <img src="/img/stories picture 1.jpg" alt="img" class="stories-picture">
+                    <img src="/img/stories-picture-1.jpg" alt="img" class="stories-picture">
                 </div>
                 <div class="stories-text">
                     <h3 class="stories-text-title">10 Photos of Attractive Thailand</h3>
@@ -111,7 +111,7 @@
             </div> 
             <div class="stories-item">
                 <div class="stories-picture">
-                    <img src="/img/stories picture 2.jpg" alt="img" class="stories-picture">
+                    <img src="/img/stories-picture-2.jpg" alt="img" class="stories-picture">
                 </div>
                 <div class="stories-text">
                     <h3 class="stories-text-title">10 Photos of Attractive Thailand</h3>
@@ -124,7 +124,7 @@
             </div>
             <div class="stories-item">
                 <div class="stories-picture">
-                    <img src="/img/stories picture 3.jpg" alt="img" class="stories-picture">
+                    <img src="/img/stories-picture-3.jpg" alt="img" class="stories-picture">
                 </div>
                 <div class="stories-text">
                     <h3 class="stories-text-title">10 Photos of Attractive Thailand</h3>
@@ -137,7 +137,7 @@
             </div>
             <div class="stories-item">
                 <div class="stories-picture">
-                    <img src="/img/stories picture 4.jpg" alt="img" class="stories-picture">
+                    <img src="/img/stories-picture-4.jpg" alt="img" class="stories-picture">
                 </div>
                 <div class="stories-text">
                     <h3 class="stories-text-title">10 Photos of Attractive Thailand</h3>
@@ -157,9 +157,9 @@
     <footer class="footer">
         <span class="footer-text">All Rights Reserved © Travel Portal</span>
         <ul class="footer-icon-list">
-            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer icon 1.svg" alt="icon"></a></li>
-            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer icon 2.svg" alt="icon"></a></li>
-            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer icon 3.svg" alt="icon"></a></li>
+            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer-icon-1.svg" alt="icon"></a></li>
+            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer-icon-2.svg" alt="icon"></a></li>
+            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer-icon-3.svg" alt="icon"></a></li>
         </ul>
     </footer>
 </body>
