some more changes name picture

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p class="steps-content-item">Tell us what you want to do</p>
                 </div>
                 <div class="steps-content-item">
-                    <img src="/icon/Second -icon.svg" alt="icon" class="step-icon">
+                    <img src="/icon/Seconds-icon.svg" alt="icon" class="step-icon">
                     <p class="steps-content-item">Share us preferable dates </p>
                 </div>
                 <div class="steps-content-item">
