--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
 
-    <title>Document</title>
+    <title>Travel</title>
+    <link rel="icon" href="/icon/logo.svg">
 </head>
 <body class="body">
     <header>
@@ -26,10 +27,10 @@
             </nav>
             <nav>
                 <ul class="nav-list">
-                    <li class="nav-list-item"><a class="nav-list-item-text" href="#">How It Works</a></li>
-                    <li class="nav-list-item"><a class="nav-list-item-text" href="#">Plan Your Trip</a></li>
-                    <li class="nav-list-item"><a class="nav-list-item-text" href="#">Destinations</a></li>
-                    <li class="nav-list-item"><a class="nav-list-item-text" href="#">Travel Stories</a></li>
+                    <li class="nav-list-item"><a class="nav-list-item-text" href="#preview">How It Works</a></li>
+                    <li class="nav-list-item"><a class="nav-list-item-text" href="#steps">Plan Your Trip</a></li>
+                    <li class="nav-list-item"><a class="nav-list-item-text" href="#desitanation">Destinations</a></li>
+                    <li class="nav-list-item"><a class="nav-list-item-text" href="#stories">Travel Stories</a></li>
                 </ul>
             </nav>
             <button type="button" class="nav-button button">
@@ -40,7 +41,7 @@
     <main class="main-content">
         <section class="preview">
             <div class="preview-element">
-                <h1 class="preview-title">Explore the beauty of the World</h1>
+                <a name="preview"><h1 class="preview-title">Explore the beauty of the World</h1></a>
                 <p class="preview-text">Receive personalized recommendations for countries, hotels, activities and more</p>
                 <div class="search">
                     <input type="text" placeholder="What would you like to do?" class="input">
@@ -49,14 +50,14 @@
             </div>
         </section>  
         <section class="steps">
-            <h2 class="steps-title">3 STEPS TO THE PERFECT TRIP</h2>
+            <a name="steps"><h2 class="steps-title">3 STEPS TO THE PERFECT TRIP</h2></a>
             <div class="steps-content">
                 <div class="steps-content-item">
                     <img src="/icon/First-icon.svg" alt="icon" class="step-icon">
                     <p class="steps-content-item">Tell us what you want to do</p>
                 </div>
                 <div class="steps-content-item">
-                    <img src="/icon/Seconds-icon.svg" alt="icon" class="step-icon">
+                    <img src="/icon/Second-icon.svg" alt="icon" class="step-icon">
                     <p class="steps-content-item">Share us preferable dates </p>
                 </div>
                 <div class="steps-content-item">
@@ -66,7 +67,7 @@
             </div>
         </section>
         <section class="destination">
-            <h2 class="destination-title">POPULAR DESTINATIONS</h2>
+            <a name="desitanation"><h2 class="destination-title">POPULAR DESTINATIONS</h2></a>
             <div class="destination-country">
                 <div class="destination-item">
                     <img src="/img/destination-1.jpg" alt="spain" class="destination-item-picture">
@@ -86,7 +87,7 @@
                 <span class="dot-second"></span>
                 <span class="dot-third"></span>
             </div>
-            <button class="destination-button">
+            <button class="destination-button button">
                 <img src="/icon/arrow.svg" alt="arrow" class="button-arrow">
                 <span class="button-text">Find More</span>
             </button>
@@ -95,7 +96,7 @@
             <div class="bg-3"></div>
         </div>
         <section class="stories">
-            <h2 class="stories-title">TRAVEL STORIES</h2>
+            <a name="stories"><h2 class="stories-title">TRAVEL STORIES</h2></a>
             <div class="stories-item first">
                 <div class="stories-picture">
                     <img src="/img/stories-picture-1.jpg" alt="img" class="stories-picture">
@@ -148,7 +149,7 @@
                      </p>
                 </div>  
             </div>
-            <button class="stories-button">
+            <button class="stories-button button">
                 <img src="/icon/arrow.svg" alt="arrow" class="button-arrow">
                 <span class="button-text">See More</span>
             </button>
@@ -157,9 +158,9 @@
     <footer class="footer">
         <span class="footer-text">All Rights Reserved © Travel Portal</span>
         <ul class="footer-icon-list">
-            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer-icon-1.svg" alt="icon"></a></li>
-            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer-icon-2.svg" alt="icon"></a></li>
-            <li class="footer-icon-list-item"><a href=""><img src="/icon/footer-icon-3.svg" alt="icon"></a></li>
+            <li class="footer-icon-list-item"><a href=" https://rs.school/js-stage0/" target="_blank"><img src="/icon/footer-icon-1.svg" alt="icon"></a></li>
+            <li class="footer-icon-list-item"><a href="https://github.com/ivansuzdaliev" target="_blank"><img src="/icon/footer-icon-2.svg" alt="icon"></a></li>
+            <li class="footer-icon-list-item"><a href="#"><img src="/icon/footer-icon-3.svg" alt="icon"></a></li>
         </ul>
     </footer>
 </body>
