--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
             <div class="steps-content">
                 <div class="steps-content-item">
                     <img src="/icon/First-icon.svg" alt="icon" class="step-icon">
-                    <p class="steps-content-item">Tell us what you want to do</p>
+                    <p class="steps-content-item-text">Tell us what you want to do</p>
                 </div>
                 <div class="steps-content-item">
                     <img src="/icon/Second-icon.svg" alt="icon" class="step-icon">
-                    <p class="steps-content-item">Share us preferable dates </p>
+                    <p class="steps-content-item-text">Share us preferable dates </p>
                 </div>
                 <div class="steps-content-item">
                     <img src="/icon/Third-icon.svg" alt="icon" class="step-icon">
-                    <p class="steps-content-item">We will give you recommendations</p>
+                    <p class="steps-content-item-text">We will give you recommendations</p>
                 </div>
             </div>
         </section>
